--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles2.css">
+    <link rel="stylesheet" href="estilos.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
     </style>
@@ -146,7 +146,6 @@
                 <h2>Contáctanos</h2>
             </div>
             <div>
-                <label for="txt-name">Nombre y Apellido</label>
                 <input id="txt-name" type="text" placeholder="Nombre y Apellido" />
             </div>
             <div>
@@ -218,7 +217,8 @@
 
 
     <footer>
-        Todos los derechos reservados Front End
+        Nos quedo bonito :) - Rod Navea - Macarena Puebla - Alejandra Gavotti - Nestor Real - Freyler Chavez - Sofia
+        Mansilla
     </footer>
 </body>
 
